# AutoWeather4D

./: .gitignore  .gitmodules  README.md  auto-weather-4d.yaml  pyproject.toml  requirements.txt  run.py
configs/: default.yaml  snow_light.yaml
rendering/: cleanup.py  forward_diffusion.py  subprocess_utils.py  vidrefiner.py
rendering/color/: lut.py
rendering/effects/geometry/: height_map.py  rain_effects.py  rain_puddle.py  snow_config.py  snow_effects.py  snow_falling.py  snow_grid.py  snow_kernels.py  snow_modifier.py
rendering/effects/light/: fog_effects.py  night_effects.py
rendering/gbuffer/: grade.py  material.py  save.py
rendering/lighting/: brdf.py  lights.py
rendering/pipeline/: __init__.py  brdf_video.py  forward_gbuffer.py  geometry_effects.py  light_effects.py  progress.py  render_context.py  render_host.py  weather_renderer.py
scripts/: download_assets.sh
